Rewrote the initialize-register pass, now correctly implemented with a new IR construct - Null. LetRec is not implemented, but is marked with a TODO.
Test cases for this pass are now located in
test/passes/initialize-register

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ src/main/stanza/firrtl-main
 utils/bin/firrtl
 test/unit/Output
 test/unit/*.out
+spec/spec.aux
+spec/spec.log
+spec/spec.pdf
+spec/spec.synctex.gz
