Added a infrastructure for check passes, and wrote a few

--- a/.gitignore
+++ b/.gitignore
@@ -9,16 +9,15 @@
 */*/*/*.swp
 */*/*.flo
 */*/*.out
+*/*/Output
 */*/*/*.flo
+*/*/*/*.out
+*/*/*/Output
 src/lib/stanzam
 src/lib/stanza
 src/*/__MACOSX
 src/main/stanza/firrtl-main
 utils/bin/firrtl
-test/passes/Output
-test/passes/*/Output
-test/passes/*.out
-test/passes/*/*.out
 spec/spec.aux
 spec/spec.log
 spec/spec.synctex.gz
