Remove redundant tests from Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 git:
   depth: 10
 
-sbt_args: -Dsbt.log.noformat=true ++$TRAVIS_SCALA_VERSION
+sbt_args: -Dsbt.log.noformat=true
 
 env:
   global:
@@ -26,14 +26,7 @@ before_script:
 
 jobs:
   include:
-    - stage: Test
-    - &test
+    - stage: test
       script:
-        # FIRRTL Tests
-        - cd $TRAVIS_BUILD_DIR
-        - sbt clean test
-    - <<: *test
-      script:
-        - cd $TRAVIS_BUILD_DIR
         - sbt clean assembly publish-local
         - bash .run_chisel_tests.sh
