Refactor formal equivalence CI test
Make the check script allow different designs
Add FPU, ICache, and RocketCore to regress and use instead of Rob for CI
equivalence check

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,10 @@ jobs:
         - bash .run_chisel_tests.sh
     - stage: test
       script:
-        - travis_wait 90 bash .run_formal_checks.sh
+        - ./.run_formal_checks.sh RocketCore
+    - stage: test
+      script:
+        - ./.run_formal_checks.sh FPU
+    - stage: test
+      script:
+        - ./.run_formal_checks.sh ICache
