Try to get dependencies installed and stages in correct order.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,13 @@ git:
 
 sbt_args: -Dsbt.log.noformat=true
 
-install: ./.install-dependencies.sh
+before_script:
+  - bash .install-dependencies.sh
+
+stages:
+  - compile
+  - test
+  - style
 
 jobs:
   include:
