Cache verilator; try not to rebuild firrtl if we have a suitable version already built.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: scala
 scala:
-  - 2.11.11
-  - 2.12.3
+  - 2.11.12
+  - 2.12.4
 sudo: false
 
 cache:
   directories:
     $HOME/.ivy2
+    $INSTALL_DIR
 
 git:
   depth: 10
