--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
         - sbt clean compile
     - stage: test
       script:
-        - sbt test -l tags.RequiresBackend
+        - sbt "testOnly -- -l tags.RequiresBackend"
     - stage: style
       script:
         - sbt scalastyle  test:scalastyle
