--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,18 @@ sudo: false
 cache:
   directories:
     $HOME/.ivy2
-#    $INSTALL_DIR
+    $INSTALL_DIR
 
 git:
   depth: 10
 
 sbt_args: -Dsbt.log.noformat=true
 
-#env:
-#  global:
-#    INSTALL_DIR=$TRAVIS_BUILD_DIR/install
-#    VERILATOR_ROOT=$INSTALL_DIR
-#    PATH=$PATH:$VERILATOR_ROOT/bin:$TRAVIS_BUILD_DIR/utils/bin
+env:
+  global:
+    INSTALL_DIR=$TRAVIS_BUILD_DIR/install
+    VERILATOR_ROOT=$INSTALL_DIR
+    PATH=$PATH:$VERILATOR_ROOT/bin:$TRAVIS_BUILD_DIR/utils/bin
 
 before_install:
   - bash .install-dependencies.sh
