--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,13 +27,16 @@ jobs:
 
     steps:
 
+    # Perform a "default" checkout to get ssh set up.
+    - checkout
+
     - run:
         command: |
           date > date.prep
           printenv
           git clone --depth 10 --branch $CIRCLE_BRANCH "$FIRRTL_REPO" firrtl && (cd firrtl && git checkout $FIRRTL_REV)
           echo $FIRRTL_REV && (cd firrtl && git log -1 > ../firrtl.log)
-          git clone --depth 10 "$CIRCLE_REPOSITORY_URL" chisel3 && (cd chisel3 && git checkout $CHISEL_REV && git reset --hard "$CIRCLE_SHA1")
+          # git clone --depth 10 "$CIRCLE_REPOSITORY_URL" chisel3 && (cd chisel3 && git checkout $CHISEL_REV && git reset --hard "$CIRCLE_SHA1")
 
     # Download and cache dependencies
     - restore_cache:
