Make mergify run when no reviews request changes (#1043)

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -10,6 +10,7 @@ pull_request_rules:
     conditions:
       - status-success=continuous-integration/travis-ci/pr
       - "#approved-reviews-by>=1"
+      - "#changes-requested-reviews-by=0"
       - base=master
       - label="Please Merge"
       - label!="DO NOT MERGE"
